Archive2/59/74ce99a19def2f/output
main.cpp:2:1: error: 'CStringA' does not name a type
 CStringA ConvertUTF16ToUTF8( __in LPCWSTR pszTextUTF16, size_t wlen = 0 ) {
 ^
